correccion alta usuarios bo

--- a/cuentaComercios/cuentaComercios/src/main/resources/application.properties
+++ b/cuentaComercios/cuentaComercios/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #  PARA DESARROLLO QUITAR EN PRODUCCION
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.dll-auto=create-drop
 logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
