carga de terminos y condiciones

--- a/cuentaComerciosBO/cuentaComerciosBO/src/main/resources/application.properties
+++ b/cuentaComerciosBO/cuentaComerciosBO/src/main/resources/application.properties
@@ -17,3 +17,9 @@ server.port=8090
 # PROPERTIES JWT
 jwt.secret=pibw78bczBvPIfcD7imr2QjfJnh69XtYlzMD9lJ3sh7HJCYChG
 jwt.expiration=16000
+
+## UPLOAD FILES
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+file.documents.path=D:/storage/documents
+file.tyc.path=D:/storage/tyc
